Updated application properties and pom with MySQL dependencies

--- a/Main_Project/src/main/resources/application.properties
+++ b/Main_Project/src/main/resources/application.properties
@@ -1,4 +1,26 @@
 # H2 Configurations
-spring.h2.console.enabled=true
-spring.datasource.platform=h2
-spring.datasource.url=jdbc:h2:mem:mydb
+#spring.h2.console.enabled=true
+#spring.datasource.platform=h2
+#spring.datasource.url=jdbc:h2:mem:mydb
+
+server.port = 8082
+logging.level.org.springframework = WARN
+logging.level.org.hibernate = WARN
+logging.level.com.springsecurity.demo = DEBUG
+
+########## Data-Source(MySQL) properties ##########
+spring.datasource.url = jdbc:mysql://localhost:3306/bbsdb?useSSL=false
+spring.datasource.username = root
+spring.datasource.password = admin
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+########## JPA Properties ##########
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.generate-ddl = true
+spring.jpa.show-sql = true
+
+######### Mailtrap.io Credentials ########
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=21a4bcd20bf87f
+spring.mail.password=4cde860f3d0e1b
