--- a/Main_Project/pom.xml
+++ b/Main_Project/pom.xml
@@ -87,6 +87,12 @@
 			<version>1.2</version>
 		</dependency>
 
+	
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.23</version>
+		</dependency>
 
 	</dependencies>
 
