--- a/Main_Project/src/main/resources/application.properties
+++ b/Main_Project/src/main/resources/application.properties
@@ -12,11 +12,13 @@ logging.level.com.springsecurity.demo = DEBUG
 spring.datasource.url = jdbc:mysql://localhost:3306/bbsdb?useSSL=false
 spring.datasource.username = root
 spring.datasource.password = admin
+#spring.datasource.initialization-mode=always
 
 ########## JPA Properties ##########
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl = true
 spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto=update
 
 ######### Mailtrap.io Credentials ########
 spring.mail.host=smtp.mailtrap.io
