Payment module modified

--- a/Main_Project/pom.xml
+++ b/Main_Project/pom.xml
@@ -70,6 +70,11 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- <dependency> 
+				<groupId>org.springframework.boot</groupId> 
+				<artifactId>spring-boot-starter-thymeleaf</artifactId> 
+			</dependency> -->
+
 		<!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-jasper -->
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
@@ -120,5 +125,6 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
+
+
