upload updated document and arrange folders

--- a/Main_Project/src/main/resources/application.properties
+++ b/Main_Project/src/main/resources/application.properties
@@ -11,7 +11,7 @@ logging.level.com.springsecurity.demo = DEBUG
 ########## Data-Source(MySQL) properties ##########
 spring.datasource.url = jdbc:mysql://localhost:3306/bbsdb?useSSL=false
 spring.datasource.username = root
-spring.datasource.password = admin
+spring.datasource.password = Young@10
 #spring.datasource.initialization-mode=always
 
 
